[project]
name = "cumulus-library-hypertension"
version = "0.1.3"
requires-python = ">= 3.9"
dependencies = [
    "cumulus-library >= 1.4, < 2",
    "sqlfluff == 2.0.2"
]
description = "SQL generation for Cumulus hypertension analysis"
readme = "README.md"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Home = "https://smarthealthit.org/cumulus/"
Documentation = "https://docs.smarthealthit.org/cumulus/"
Source = "https://github.com/smart-on-fhir/cumulus-library-hypertension"


[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
tests = [
    "pytest",
]
dev = [
    "black",
    "pylint",
]

[tool.flit.sdist]
include = ["htn/"]
